<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CurConver</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="titleFrom">From</string>
	<string name="titleTo">To</string>
	<string name="bttConvert">Convert</string> 
	<string name="bttDefaultFrom">USD</string>
	<string name="bttDefaultTo">COP</string>
	<string name="currencyList">Currency Selecter</string>
</resources>
