<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainPage" >
    
        <!-- android:background="#000000" 
        android:textColor="#FFFFFF" -->

    <Button
        android:id="@+id/bttConvert"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtToBox"
        android:layout_marginTop="42dp"
        android:layout_toRightOf="@+id/tvTo"
        android:text="@string/bttConvert" />

    <Button
        android:id="@+id/bttTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bttFrom"
        android:layout_below="@+id/txtFromBox"
        android:layout_marginTop="22dp"
        android:onClick="openSelecter"
        android:text="@string/bttDefaultTo"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bttFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFrom"
        android:layout_below="@+id/tvFrom"
        android:onClick="openSelecter"
        android:text="@string/bttDefaultFrom"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bttTo"
        android:layout_below="@+id/bttFrom"
        android:text="@string/titleTo" />

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="44dp"
        android:text="@string/titleFrom" />

    <EditText
        android:id="@+id/txtToBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bttTo"
        android:layout_toRightOf="@+id/bttTo"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtFromBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTo"
        android:layout_alignLeft="@+id/txtToBox"
        android:ems="10"
        android:focusable="true"
        android:inputType="number" />

</RelativeLayout>
